# grasping_oru

./: .gitignore  README.md
constraint_map/: CMakeLists.txt  package.xml
constraint_map/include/constraint_map/: ConstraintMap.hh  MapInterface.hh  RegionExtraction.hh  SimpleOccMap.hh  constraint_map.h  geometric_constraint.h  gripper_configuration.h  gripper_model.h  map_interface.h  region_extract_distance_field.h  region_extract_segment_tree.h  region_extraction.h  simple_occ_map.h
constraint_map/msg/: SimpleOccMapMsg.msg
constraint_map/src/: compute_constraints.cpp  constraint_map.cpp  region_extract_distance_field.cpp  region_extract_segment_tree.cpp  region_extraction.cpp  simple_occ_map.cpp  simple_occ_map_node.cpp  test_regions.cpp
constraint_map_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
constraint_map_rviz/src/: occ_visual.cpp  occ_visual.hpp
grasp_learning/: CMakeLists.txt  package.xml  setup.py
grasp_learning/include/grasp_learning/: MultiVariateGaussian.h  RBFNetwork.h  demo_learn_manifold.h  demo_learning.h  fileHandler.h  grasp_recorder.h  power.h  run_demo_node.h
grasp_learning/launch/: NPG.launch  QLearning.launch  RBFNetwork.launch  TRPO.launch  TRPO_exp.launch  VPG.launch  VPG_exp.launch  ddpg.launch  demo.rviz  demo_grasping_gazebo.launch  demo_learn_manifold.launch  demo_learn_manifold_online.launch  grasp_recorder.launch  offline_yumi.launch  policy_gradient_OP.launch  policy_gradient_OP_exp.launch  policy_search.launch  run_demo_node.launch  test.launch
grasp_learning/launch/old_launch_files/: NPG.launch  NPG_exp.launch  PISquare.launch  QLearning.launch  TRPO.launch
grasp_learning/msg/: RobotState.msg  StartRecording.msg
grasp_learning/old_launch_files/: NPG.launch  TRPO.launch  policy_finite_difference_learning.launch  policy_gradient_learner.launch  policy_learner.launch  policy_learner_tf.launch
grasp_learning/old_scripts/: NPG.py  TRPO.py  policy_finite_difference_learning.py  policy_gradient_learning.py  policy_learning.py  policy_learning_tf.py
grasp_learning/plotting/: plot_data.py
grasp_learning/scripts/: 2d_policy_search_with_1d_reward.py  FileHandler.py  LinearPolicy.py  NPG.py  NPG_exp.py  PISquare.py  QLearning.py  QNetwork.py  TRPO.py  TRPO_exp.py  VPG.py  VPG_exp.py  ddpg.py  ddpg.py.bak  ou_noise.py  plot.py  plot_data.py  policy_gradient_OP.py  policy_gradient_OP_exp.py  policy_search.py  policy_search_one_reward.py  replay_buffer.py  test.py  test_policy_gradient_OP.sh  test_policy_search.sh  utils.py  value_function.py
grasp_learning/src/: MultiVariateGaussian.cpp  RBFNetwork.cpp  RBFNetworkNode.cpp  demo_learn_manifold.cpp  demo_learning.cpp  fileHandler.cpp  grasp_learning_node.cpp  grasp_recorder.cpp  grasp_recorder_node.cpp  power.cpp  run_demo_node.cpp
grasp_learning/srv/: AddNoise.srv  CallRBFN.srv  GetNetworkWeights.srv  PolicySearch.srv  QueryNN.srv  SetRBFN.srv
grasp_learning/stored_data/parameter_data/: .~lock.parameters.csv#  parameters.csv  parameters.xlsx
grasp_learning/stored_data/tested_data/: checkpoint  hard_model.ckpt.index  means.m  tdyn.m
grasp_learning/tests/: test_PISquare.sh  test_policy_gradient_OP.sh  test_policy_search_1D.sh
grasp_planner/: CMakeLists.txt  package.xml  test_10mm.txt
grasp_planner/cfg/: README  dummy.cons
grasp_planner/launch/: gp_online_05mm_cylinder.launch  gp_online_10mm_cylinder.launch  gp_online_10mm_sphere.launch  gp_sim_05mm_cylinder.launch  gp_sim_05mm_sphere.launch  gp_sim_10mm_cylinder.launch  gp_sim_10mm_sphere.launch  grasp_planner.launch  grasp_planner_online.launch  offline_yumi.launch  online_planner.launch  online_yumi.launch  replay.launch  test_yumi.launch
grasp_planner/scripts/: test_service_call.sh  test_set_primitive.sh  tf_retime
grasp_planner/src/: grasp_planner.cpp  grasp_planner_node.cc  point_cloud_publisher.cpp  run_tests.cc
grasp_planner/srv/: PlanGrasp.srv
hiqp_avoid_collisions_sdf/: CMakeLists.txt  add_avoidance_cylinder.sh  add_avoidance_task.sh  move_below_table.sh  package.xml  plugins.xml
hiqp_avoid_collisions_sdf/src/: add_avoidance_cylinders.cpp  right_gripper_capsule.cpp  tdef_avoid_collisions_sdf.cpp
obstacle_avoidance_gazebo/: CMakeLists.txt  package.xml
obstacle_avoidance_gazebo/launch/: demo_grasping_bunny.launch  demo_grasping_gazebo.launch  demo_grasping_online.launch  demo_pickup_right.launch  gazebo.rviz  grasp_planner_bunny.launch  grasp_planner_bunny_box_on_table.launch  grasp_planner_bunny_cylinder_on_table.launch  grasp_planner_bunny_on_table.launch  grasp_planner_online.launch  yumi_bunny_box_on_table.launch  yumi_bunny_box_on_table_real_sensors.launch  yumi_bunny_cylinder_on_table.launch  yumi_bunny_cylinder_on_table_gazebo_moveit.launch  yumi_bunny_obj.launch  yumi_bunny_on_table.launch  yumi_simulation_depth.launch  yumi_stanford_bunny.launch  yumi_table_and_objects_gazebo_moveit.launch
obstacle_avoidance_gazebo/scripts/: left_arm_to_object.sh  right_arm_to_object.sh
obstacle_avoidance_gazebo/src/: contact_plugin.cc
obstacle_avoidance_gazebo/worlds/: bunny.world  bunnyBoxOnTable.world  bunnyBoxOnTableRealSensors.world  bunnyCylinderOnTable.world  bunnyOnTable.world  fullSetup.world  tableWObjects.world  tableWbunnyObj.world
sdf_collision_check/: CMakeLists.txt  package.xml
sdf_collision_check/msg/: SDFGradients.msg
sdf_collision_check/src/: sdf_collision_checker.cpp
sdf_tracker_grasping/: CMakeLists.txt  package.xml
sdf_tracker_grasping/launch/: launch_sdf_tracker.launch  tracker_03mm.launch
sdf_tracker_grasping/src/: sdf_tracker.cpp  sdf_tracker_node.cpp
sdf_tracker_msgs/: CMakeLists.txt  package.xml
sdf_tracker_msgs/msg/: SDFMap.msg
sdf_tracker_msgs/srv/: GetSDFMap.srv
task_definition_plugins/: CMakeLists.txt  package.xml  plugins.xml
task_definition_plugins/src/: add_avoidance_cylinders.cpp  tdef_avoid_collisions_sdf.cpp  tdef_meta_task.cpp
task_dynamic_plugins/: CMakeLists.txt  package.xml  plugins.xml
task_dynamic_plugins/src/: tdyn_RBFN.cpp  tdyn_constant.cpp  tdyn_linear_policy.cpp  tdyn_policy.cpp  tdyn_random.cpp
(+87 files in other folders)
