<?xml version="1.0"?>
<package>
  <name>constraint_map_rviz</name>
  <version>0.0.0</version>
  <description>The constraint_map_viz package</description>

  <maintainer email="tsv@todo.todo">tsv</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <build_depend>constraint_map</build_depend>
  <run_depend>constraint_map</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
