<?xml version="1.0"?>
<package>
  <name>grasp_planner</name>
  <version>0.0.0</version>
  <description>The grasp_planner package</description>

  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>constraint_map</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sdf_tracker_grasping</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hiqp_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>constraint_map</run_depend>
  <run_depend>sdf_tracker_grasping</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hiqp_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>

  <export>
  </export>
</package>
