<?xml version="1.0"?>
<package>
  <name>obstacle_avoidance_gazebo</name>
  <version>0.0.0</version>
  <description>The obstacle_avoidance_gazebo package</description>

  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>grasp_planner</build_depend>
  <build_depend>hiqp_demos</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>grasp_planner</run_depend>
  <run_depend>hiqp_demos</run_depend>

</package>
