<?xml version="1.0"?>
<package>
  <name>sdf_collision_check</name>
  <version>0.0.0</version>
  <description>The sdf_collision_check package</description>
  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sdf_tracker_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sdf_tracker_msgs</run_depend>
</package>
