<?xml version="1.0"?>
<package>
  <name>sdf_tracker_grasping</name>
  <version>1.0.28</version>
  <description>The sdf_tracker package</description>

  <maintainer email="daniel.canelhas@oru.se">Daniel Canelhas</maintainer>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
    <maintainer email="ksatyaki@gmail.com">Chittaranjan Swaminathan</maintainer>
  <license>BSD</license>
  <author email="daniel.canelhas@oru.se">Daniel Canelhas</author> 

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libvtk</build_depend>
  <build_depend>constraint_map</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>sdf_tracker_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>libvtk</run_depend>
  <run_depend>constraint_map</run_depend>
  <run_depend>sdf_tracker_msgs</run_depend>


  <export>
  </export>
</package>
